<resources>
    <string name="app_name">nav-drawer</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="lorem">@tools:sample/lorem/random</string>

    <string name="menu_home">Главная</string>
    <string name="menu_photo">Выбор фото</string>
    <string name="menu_state">Состояния</string>
    <string name="menu_list">Списки</string>
    <string name="menu_dialog_fragment">Dialog Fragment</string>
    <string name="menu_recyclerview">RecyclerView</string>

    <string name="simple_dialog">Dialog Fragment - по умолчанию</string>
    <string name="single_choice_dialog">Dialog Fragment - единичный выбор</string>
    <string name="single_choice_confirm_dialog">Dialog Fragment - единичный выбор с подтверждением</string>
    <string name="multi_choice_dialog">Dialog Fragment - множественный выбор</string>
    <string name="multi_choice_confirm_dialog">Dialog Fragment - множественный выбор с подтверждением</string>
    <string name="current_volume">Текущий уровень звука: %1$d%%</string>
    <string name="current_color">Текущий цвет</string>
    <string name="volume_description">Уровень звука: %1$d%%</string>
    <string name="volume_setup">Установка уровня звука</string>
    <string name="custom_view">Dialog Fragment - пользовательский шаблон</string>
    <string name="custom_single_choice">Dialog Fragment - единичный выбор (пользовательский)</string>
    <string name="custom_input_1">Dialog Fragment - input #1</string>
    <string name="custom_input_2">Dialog Fragment - input #2</string>
    <string name="input_value">Введите значение</string>

    <string-array name="colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>

    <string name="popup_menu_move_up">Перемещение вверх</string>
    <string name="popup_menu_move_down">Перемещение вниз</string>
    <string name="popup_menu_remove">Удалить</string>
</resources>