<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_photo" />
        <item
            android:id="@+id/nav_state"
            android:icon="@drawable/ic_menu_state"
            android:title="@string/menu_state" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_dialog"
            android:icon="@drawable/ic_menu_dialog"
            android:title="@string/menu_dialog_fragment" />
        <item
            android:id="@+id/nav_recyclerview"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_recyclerview" />
    </group>
</menu>