<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nav_drawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_photo"
        android:name="com.example.nav_drawer.ui.photo.PhotoFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_photo" />

    <fragment
        android:id="@+id/nav_state"
        android:name="com.example.nav_drawer.ui.state.StateFragment"
        android:label="@string/menu_state"
        tools:layout="@layout/fragment_state" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.nav_drawer.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_nav_list_to_nav_base_list"
            app:destination="@id/nav_base_list"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_base_list"
        android:name="com.example.nav_drawer.ui.list.baseadapter.ListBaseAdapterFragment"
        android:label="fragment_list_base_adapter"
        tools:layout="@layout/fragment_list_base_adapter" >
        <action
            android:id="@+id/action_nav_base_list_to_nav_list"
            app:destination="@id/nav_list"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
</navigation>